
2008-12-10 Tatsuhiko Kubo <cubicdaiya@gmail.com>

	* added sample of diff3 (strdiff3, intdiff3)
	
	* added diff3 
	
	* + -> - to - -> + with Unified Diff Format 
	
	* dtl Import Unified Diff Format Data Structure from unidiff.cpp.

	* fixed bug. function check whether file exists(common.cpp)
	
	* 0.05 released.

2008-11-10 Tatsuhiko Kubo <cubicdaiya@gmail.com>

	* Improved accuracy of diff

	* fixed serious memory bug for patch

	* changed type of argument in function fileExists(common.hpp, common.cpp)
	
	* 0.04 released.
	
2008-11-06 Tatsuhiko Kubo <cubicdaiya@gmail.com>

	* add erorr check for sample programs
	
	* 0.03 released.
	
2008-10-31 Tatsuhiko Kubo <cubicdaiya@gmail.com>

	* renamed ChangLog to ChangeLog
	
        * modified README

	* output OK message on patch and fpatch

	* 0.02 released.
	
2008-10-30 Tatsuhiko Kubo <cubicdaiya@gmail.com>

        * 0.01 released.
