@@ -24,11 +24,18 @@ int main(int argc, char *argv[]) {
   
   std::string s1(A);
   std::string s2 = d.patch(s1, ses);
+  d.composeUnifiedHunks();
+  std::string s3 = d.uniPatch(s1);
 
   std::cout << "before:" << s1 << std::endl;
-  std::cout << "after:" << s2 << std::endl;
+  std::cout << "after :" << s2 << std::endl;
   assert(B == s2);
   std::cout << "patch OK" << std::endl;
+  
+  std::cout << "before:" << s1 << std::endl;
+  std::cout << "after :" << s3 << std::endl;
+  assert(B == s3);
+  std::cout << "unipatch OK" << std::endl;
 
   return 0;
 }
